--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.3.3",
     "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "groq": "^2.29.3",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
