--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@sanity/client": "^3.3.3",
     "@sanity/image-url": "^1.0.1",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "date-fns": "^2.29.1",
     "groq": "^2.29.3",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
     "next-sanity": "^0.6.2",
     "next-sanity-image": "^4.1.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
   },
