--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "date-fns": "^2.29.1",
     "groq": "^2.29.3",
+    "mapbox-gl": "^2.9.2",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
     "next-sanity": "^0.6.2",
@@ -25,7 +26,8 @@
     "react": "18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-map-gl": "^7.0.18"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
