--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-map-gl": "^7.0.18"
+    "react-map-gl": "^7.0.18",
+    "react-multi-carousel": "^2.8.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
