--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@portabletext/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.5",
     "@sanity/client": "^3.3.3",
     "@sanity/image-url": "^1.0.1",
     "@tailwindcss/line-clamp": "^0.4.0",
@@ -26,7 +27,8 @@
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-map-gl": "^7.0.18"
+    "react-map-gl": "^7.0.18",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
