--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-map-gl": "^7.0.18",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.0-beta.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
