--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "firebase": "^9.9.4",
     "groq": "^2.29.3",
     "mapbox-gl": "^2.9.2",
-    "next": "12.2.3",
+    "next": "^13.0.6",
     "next-auth": "^4.10.3",
     "next-sanity": "^0.6.2",
     "next-sanity-image": "^4.1.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-date-range": "^1.4.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-map-gl": "^7.0.18",
     "react-redux": "^8.0.2",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.3",
+    "eslint-config-next": "^13.0.6",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7"
   }
